# NetworkProgrammingLib

NetworkProgramming/: .gitignore  CMakeLists.txt  Doxyfile  Network-Programming.code-workspace  README.md  custom.css
NetworkProgramming/include/: clientTCP.hpp  clientTCPdaytime.hpp  serverTCP.hpp  serverTCPdaytime.hpp  socket.hpp
NetworkProgramming/src/: clientTCP.cpp  clientTCPdaytime.cpp  serverTCP.cpp  serverTCPdaytime.cpp  socket.cpp
